[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scripts/Network.gd" type="Script" id=1]
[ext_resource path="res://DebugMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=3]
[ext_resource path="res://Scripts/UI.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Overlay.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Game.gd" type="Script" id=6]
[ext_resource path="res://Lobby.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scripts/EffectsManager.gd" type="Script" id=8]
[ext_resource path="res://Scripts/World.gd" type="Script" id=13]
[ext_resource path="res://AnimatedBorder.tscn" type="PackedScene" id=15]
[ext_resource path="res://Sprites/cavalry.png" type="Texture" id=16]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=17]
[ext_resource path="res://Sprites/tile.png" type="Texture" id=22]

[sub_resource type="TileSet" id=1]
0/name = "BaseTile"
0/texture = ExtResource( 22 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 3, 3, 45, 52 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "BlockedTile"
1/texture = ExtResource( 22 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 0, 0, 1 )
1/region = Rect2( 3, 3, 45, 53 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0.00483092, 1 )
colors = PoolColorArray( 0.417969, 0.3396, 0.3396, 1, 0.564941, 0.43474, 0.43474, 0 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
lifetime_randomness = 0.11
emission_shape = 1
emission_sphere_radius = 12.28
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 45.37
gravity = Vector3( 0, 98, 0 )
initial_velocity = 81.91
initial_velocity_random = 0.15
angular_velocity = 351.22
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = 9.76
scale = 0.0
scale_random = 0.38
color_ramp = SubResource( 3 )

[node name="World" type="Node2D"]
script = ExtResource( 13 )

[node name="Network" type="Node" parent="."]
script = ExtResource( 1 )

[node name="Game" type="Node" parent="."]
script = ExtResource( 6 )

[node name="Players" type="Node" parent="Game"]

[node name="Red" type="Node" parent="Game/Players"]
script = ExtResource( 3 )
unit_color = Color( 0.956863, 0.121569, 0.121569, 1 )

[node name="Blue" type="Node" parent="Game/Players"]
script = ExtResource( 3 )
unit_color = Color( 0.0901961, 0.247059, 0.964706, 1 )

[node name="Green" type="Node" parent="Game/Players"]
script = ExtResource( 3 )
unit_color = Color( 0.298039, 0.878431, 0.0862745, 1 )

[node name="Yellow" type="Node" parent="Game/Players"]
script = ExtResource( 3 )
unit_color = Color( 0.870588, 0.878431, 0.0862745, 1 )

[node name="Timer" type="Timer" parent="Game"]

[node name="UI" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Overlay" type="Node" parent="UI"]
script = ExtResource( 5 )

[node name="SelectedBorder" parent="UI/Overlay" instance=ExtResource( 15 )]
visible = false
rotation = -4.46638e-06
z_index = 9
color = Color( 1, 0, 0, 1 )

[node name="HoveredBorder" parent="UI/Overlay" instance=ExtResource( 15 )]
visible = false
rotation = -4.46638e-06
z_index = 9
color = Color( 0.105882, 0.890196, 0.615686, 1 )
rotation_offset = 22.5

[node name="HUD" parent="UI" instance=ExtResource( 17 )]

[node name="DebugMenu" parent="UI" instance=ExtResource( 2 )]

[node name="Lobby" parent="UI" instance=ExtResource( 7 )]

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( -22, -26 )
tile_set = SubResource( 1 )
cell_size = Vector2( 44, 38 )
cell_half_offset = 0
format = 1
tile_data = PoolIntArray( 65537, 1, 0, 65538, 1, 0, 65539, 1, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 65545, 1, 0, 65546, 1, 0, 65547, 1, 0, 65548, 1, 0, 65549, 1, 0, 65550, 1, 0, 65551, 1, 0, 65552, 1, 0, 65553, 1, 0, 65554, 1, 0, 65555, 1, 0, 65556, 1, 0, 65557, 1, 0, 65558, 1, 0, 65559, 1, 0, 65560, 1, 0, 131073, 1, 0, 131074, 1610612736, 0, 131075, 1610612736, 0, 131076, 1610612736, 0, 131077, 1610612736, 0, 131078, 1610612736, 0, 131079, 1610612736, 0, 131080, 1610612736, 0, 131081, 1610612736, 0, 131082, 1610612736, 0, 131083, 1610612736, 0, 131084, 1610612736, 0, 131085, 1610612736, 0, 131086, 1610612736, 0, 131087, 1610612736, 0, 131088, 1610612736, 0, 131089, 1610612736, 0, 131090, 0, 0, 131091, 0, 0, 131092, 1610612736, 0, 131093, 1610612736, 0, 131094, 1610612736, 0, 131095, 1610612736, 0, 131096, 1, 0, 196609, 1, 0, 196610, 0, 0, 196611, 1610612736, 0, 196612, 1610612736, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 1610612736, 0, 196620, 1610612736, 0, 196621, 1610612736, 0, 196622, 1610612736, 0, 196623, 1610612736, 0, 196624, 1610612736, 0, 196625, 1610612736, 0, 196626, 0, 0, 196627, 0, 0, 196628, 1610612736, 0, 196629, 1610612736, 0, 196630, 1610612736, 0, 196631, 0, 0, 196632, 1, 0, 262145, 1, 0, 262146, 0, 0, 262147, 1610612736, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 1610612736, 0, 262157, 1610612736, 0, 262158, 1610612736, 0, 262159, 1610612736, 0, 262160, 1610612736, 0, 262161, 1610612736, 0, 262162, 0, 0, 262163, 0, 0, 262164, 1610612736, 0, 262165, 1610612736, 0, 262166, 1610612736, 0, 262167, 0, 0, 262168, 1, 0, 327681, 1, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 1610612736, 0, 327686, 0, 0, 327687, 1610612736, 0, 327688, 1610612736, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 327696, 0, 0, 327697, 0, 0, 327698, 1610612736, 0, 327699, 0, 0, 327700, 1610612736, 0, 327701, 1610612736, 0, 327702, 1610612736, 0, 327703, 0, 0, 327704, 1, 0, 393217, 1, 0, 393218, 0, 0, 393219, 0, 0, 393220, 1610612736, 0, 393221, 0, 0, 393222, 1610612736, 0, 393223, 0, 0, 393224, 1610612736, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 1610612736, 0, 393233, 0, 0, 393234, 0, 0, 393235, 0, 0, 393236, 1610612736, 0, 393237, 1610612736, 0, 393238, 1610612736, 0, 393239, 0, 0, 393240, 1, 0, 458753, 1, 0, 458754, 0, 0, 458755, 0, 0, 458756, 1610612736, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 0, 458770, 0, 0, 458771, 0, 0, 458772, 1610612736, 0, 458773, 1610612736, 0, 458774, 1610612736, 0, 458775, 0, 0, 458776, 1, 0, 524289, 1, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 1610612736, 0, 524297, 0, 0, 524298, 0, 0, 524299, 1610612736, 0, 524300, 0, 0, 524301, 1610612736, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0, 524306, 0, 0, 524307, 0, 0, 524308, 1610612736, 0, 524309, 1610612736, 0, 524310, 1610612736, 0, 524311, 0, 0, 524312, 1, 0, 589825, 1, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 1610612736, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0, 589844, 1610612736, 0, 589845, 1610612736, 0, 589846, 1610612736, 0, 589847, 0, 0, 589848, 1, 0, 655361, 1, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 1610612736, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0, 655378, 0, 0, 655379, 0, 0, 655380, 0, 0, 655381, 1610612736, 0, 655382, 1610612736, 0, 655383, 0, 0, 655384, 1, 0, 720897, 1, 0, 720898, 0, 0, 720899, 1610612736, 0, 720900, 0, 0, 720901, 1610612736, 0, 720902, 0, 0, 720903, 1610612736, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0, 720915, 0, 0, 720916, 1610612736, 0, 720917, 1610612736, 0, 720918, 1610612736, 0, 720919, 0, 0, 720920, 1, 0, 786433, 1, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 1610612736, 0, 786438, 1610612736, 0, 786439, 1610612736, 0, 786440, 1610612736, 0, 786441, 1610612736, 0, 786442, 1610612736, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786447, 1610612736, 0, 786448, 1610612736, 0, 786449, 0, 0, 786450, 0, 0, 786451, 0, 0, 786452, 0, 0, 786453, 1610612736, 0, 786454, 1610612736, 0, 786455, 0, 0, 786456, 1, 0, 851969, 1, 0, 851970, 0, 0, 851971, 0, 0, 851972, 0, 0, 851973, 0, 0, 851974, 0, 0, 851975, 0, 0, 851976, 0, 0, 851977, 0, 0, 851978, 0, 0, 851979, 0, 0, 851980, 1610612736, 0, 851981, 1610612736, 0, 851982, 0, 0, 851983, 1610612736, 0, 851984, 0, 0, 851985, 0, 0, 851986, 0, 0, 851987, 0, 0, 851988, 1610612736, 0, 851989, 1610612736, 0, 851990, 1610612736, 0, 851991, 0, 0, 851992, 1, 0, 917505, 1, 0, 917506, 0, 0, 917507, 1610612736, 0, 917508, 0, 0, 917509, 0, 0, 917510, 1610612736, 0, 917511, 1610612736, 0, 917512, 1610612736, 0, 917513, 1610612736, 0, 917514, 0, 0, 917515, 1610612736, 0, 917516, 0, 0, 917517, 0, 0, 917518, 0, 0, 917519, 0, 0, 917520, 0, 0, 917521, 0, 0, 917522, 0, 0, 917523, 1610612736, 0, 917524, 0, 0, 917525, 1610612736, 0, 917526, 1610612736, 0, 917527, 0, 0, 917528, 1, 0, 983041, 1, 0, 983042, 0, 0, 983043, 1610612736, 0, 983044, 0, 0, 983045, 0, 0, 983046, 1610612736, 0, 983047, 1610612736, 0, 983048, 1610612736, 0, 983049, 0, 0, 983050, 1610612736, 0, 983051, 0, 0, 983052, 1610612736, 0, 983053, 1610612736, 0, 983054, 0, 0, 983055, 0, 0, 983056, 0, 0, 983057, 1610612736, 0, 983058, 1610612736, 0, 983059, 1610612736, 0, 983060, 1610612736, 0, 983061, 1610612736, 0, 983062, 1610612736, 0, 983063, 0, 0, 983064, 1, 0, 1048577, 1, 0, 1048578, 0, 0, 1048579, 0, 0, 1048580, 0, 0, 1048581, 0, 0, 1048582, 0, 0, 1048583, 0, 0, 1048584, 0, 0, 1048585, 0, 0, 1048586, 0, 0, 1048587, 0, 0, 1048588, 0, 0, 1048589, 0, 0, 1048590, 0, 0, 1048591, 0, 0, 1048592, 0, 0, 1048593, 0, 0, 1048594, 0, 0, 1048595, 0, 0, 1048596, 0, 0, 1048597, 0, 0, 1048598, 0, 0, 1048599, 0, 0, 1048600, 1, 0, 1114113, 1, 0, 1114114, 1, 0, 1114115, 1, 0, 1114116, 1, 0, 1114117, 1, 0, 1114118, 1, 0, 1114119, 1, 0, 1114120, 1, 0, 1114121, 1, 0, 1114122, 1, 0, 1114123, 1, 0, 1114124, 1, 0, 1114125, 1, 0, 1114126, 1, 0, 1114127, 1, 0, 1114128, 1, 0, 1114129, 1, 0, 1114130, 1, 0, 1114131, 1, 0, 1114132, 1, 0, 1114133, 1, 0, 1114134, 1, 0, 1114135, 1, 0, 1114136, 1, 0 )

[node name="ForestSpritesContainer" type="Node2D" parent="."]
z_index = 1

[node name="TilesContainer" type="Node2D" parent="."]

[node name="UnitsContainer" type="Node2D" parent="."]

[node name="EffectsManager" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="BattleSoundPlayer" type="AudioStreamPlayer" parent="EffectsManager"]

[node name="MovementSoundPlayer" type="AudioStreamPlayer" parent="EffectsManager"]

[node name="ShipSoundPlayer" type="AudioStreamPlayer" parent="EffectsManager"]
volume_db = -10.0

[node name="BattleParticles" type="Particles2D" parent="EffectsManager"]
z_index = 40
emitting = false
amount = 12
lifetime = 1.5
one_shot = true
speed_scale = 1.3
explosiveness = 0.4
process_material = SubResource( 4 )
texture = ExtResource( 16 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 562, 315 )
current = true
editor_draw_limits = true
